--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,10 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="always|never" />
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/open_list"
+        android:orderInCategory="100"
+        android:title="@string/label_open_list"
+        app:showAsAction="never" />
 </menu>
